--- a/Learn Basic Algorithmic Thinking by Building a Number Sorter/index.html
+++ b/Learn Basic Algorithmic Thinking by Building a Number Sorter/index.html
@@ -1,27 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebGL Triangle</title>
-</head>
-<body>
-    <canvas width=500px height=500px ></canvas>
-    <div>
-        <button id="startButton">Start Movement</button>
-    </div>
-    <div>
-        <label for="ySlider">Move Y: </label>
-        <input type="range" id="ySlider" min="-1" max="1" step="0.01" value="0">
-    </div>
-    <div>
-        <label for="Angulo">Roda Roda: </label>
-        <input type="range" id="Angulo" min="0" max="360" step="1" value="0">
-    </div>
-    <div>
-        <label for="Angulo">Tamanho: </label>
-        <input type="range" id="escala" min="0" max="5" step="0.1" value="1">
-    </div>
-    <script src="script.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <title>Number Sorter</title>
+  </head>
+  <body>
+    <main>
+      <h1>Number Sorter</h1>
+      <form id="form" class="form">
+        <h2>Input:</h2>
+        <fieldset>
+          <span class="bracket">[</span>
+          <div>
+            <select
+              name="values"
+              class="values-dropdown"
+              aria-label="first number"
+            >
+              <option value="0">0</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8" selected>8</option>
+              <option value="9">9</option>
+            </select>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <select
+              name="values"
+              class="values-dropdown"
+              aria-label="second number"
+            >
+              <option value="0">0</option>
+              <option value="1">1</option>
+              <option value="2" selected>2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+            </select>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <select
+              name="values"
+              class="values-dropdown"
+              aria-label="third number"
+            >
+              <option value="0">0</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4" selected>4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+            </select>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <select
+              name="values"
+              class="values-dropdown"
+              aria-label="fourth number"
+            >
+              <option value="0">0</option>
+              <option value="1" selected>1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+            </select>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <select
+              name="values"
+              class="values-dropdown"
+              aria-label="fifth number"
+            >
+              <option value="0">0</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3" selected>3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+            </select>
+          </div>
+          <span class="bracket">]</span>
+        </fieldset>
+        <button id="sort">Sort</button>
+      </form>
+      <div class="output-container">
+        <h2>Output:</h2>
+        <div class="output-array">
+          <span class="bracket">[</span>
+          <div>
+            <span class="output-value" id="output-value-0">0</span>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <span class="output-value" id="output-value-1">0</span>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <span class="output-value" id="output-value-2">0</span>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <span class="output-value" id="output-value-3">0</span>
+            <span class="comma">,</span>
+          </div>
+          <div>
+            <span class="output-value" id="output-value-4">0</span>
+          </div>
+            <span class="bracket">]</span>
+        </div>
+      </div>
+    </main>
+    <script src="./script.js"></script>
+  </body>
 </html>
