--- a/1 - Projects/Telephone Number Validator/index.html
+++ b/1 - Projects/Telephone Number Validator/index.html
@@ -3,24 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebGL Triangle</title>
+    <title>Telephone Number Validator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas width=500px height=500px ></canvas>
-    <div>
-        <button id="startButton">Start Movement</button>
-    </div>
-    <div>
-        <label for="ySlider">Move Y: </label>
-        <input type="range" id="ySlider" min="-1" max="1" step="0.01" value="0">
-    </div>
-    <div>
-        <label for="Angulo">Roda Roda: </label>
-        <input type="range" id="Angulo" min="0" max="360" step="1" value="0">
-    </div>
-    <div>
-        <label for="Angulo">Tamanho: </label>
-        <input type="range" id="escala" min="0" max="5" step="0.1" value="1">
+    <div class="container">
+        <h1>Telephone Number Validator</h1>
+        <input type="text" id="user-input" placeholder="Enter phone number">
+        <button id="check-btn">Check</button>
+        <button id="clear-btn">Clear</button>
+        <div id="results-div"></div>
     </div>
     <script src="script.js"></script>
 </body>
