--- a/1 - Projects/Cash Register/index.html
+++ b/1 - Projects/Cash Register/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Palindrome Checker</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main>
-    <h1>Is it a Palindrome?</h1>
-    <label for="palindrome">Enter in text to check for a palindrome:</label>
-    <input id="text-input">
-    <button type="button" id="check-btn">Check</button>
-    <div id="result">
-    </div>
-  </main>
-  <script src="./script.js"></script>
-</body>
-<html>
+    <title>Cash Register</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Cash Register Project</h1>
+      <div id="change-due"></div>
+      <div class="input-div">
+        <label for="cash">Enter cash from customer:</label>
+        <input type="number" id="cash" class="user-input" value="" />
+        <button class="check-btn-styles" id="purchase-btn">Purchase</button>
+      </div>
+      <div class="container">
+        <div class="top-display-screen-container">
+          <p id="price-screen" class="price-screen"></p>
+          <div class="connector"></div>
+        </div>
+        <div class="top-register">
+          <div id="cash-drawer-display" class="cash-drawer-display"></div>
+        </div>
+        <div class="bottom-register">
+        </div>
+      </div>
+    </main>
+    <script src="./script.js"></script>
+  </body>
+</html>
