--- a/Learn Fetch and Promises by Building an fCC Authors Page/index.html
+++ b/Learn Fetch and Promises by Building an fCC Authors Page/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Palindrome Checker</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main>
-    <h1>Is it a Palindrome?</h1>
-    <label for="palindrome">Enter in text to check for a palindrome:</label>
-    <input id="text-input">
-    <button type="button" id="check-btn">Check</button>
-    <div id="result">
-    </div>
-  </main>
-  <script src="./script.js"></script>
-</body>
-<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>freeCodeCamp News Author Page</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <h1 class="title">freeCodeCamp News Author Page</h1>
+
+    <main>
+      <div id="author-container"></div>
+      <button class="btn" id="load-more-btn">Load More Authors</button>
+    </main>
+
+    <script src="./script.js"></script>
+  </body>
+</html>
